@@ -219,6 +219,8 @@ New Features
 
 52. SOLR-769: Added support for clustering in contrib/clustering.  See http://wiki.apache.org/solr/ClusteringComponent for more info.  (gsingers, Stanislaw Osinski)
 
+53. SOLR-1175: disable/enable replication on master side. added two commands 'enableReplication' and 'disableReplication'
+
 Optimizations
 ----------------------
  1. SOLR-374: Use IndexReader.reopen to save resources by re-using parts of the
